# mlflow-plugin

./: .gitattributes  .gitignore  README.md  README.rst  error_code_config.yml  noxconfig.py  noxfile.py  pyproject.toml
.github/workflows/: build-and-publish.yml  cd.yml  check-release-tag.yml  checks.yml  ci.yml  dependency-update.yml  fast-tests.yml  gh-pages.yml  matrix.yml  merge-gate.yml  periodic-validation.yml  pr-merge.yml  report.yml  slow-checks.yml  spike.yml
doc/: about_mlflow.rst  api.rst  conf.py  developer_guide.rst  index.rst  user_guide.rst
doc/changes/: changelog.md  changes_1.0.0.md  changes_1.1.0.md  changes_1.2.0.md  changes_2.0.0.md  unreleased.md
doc/developer_guide/: index.rst  integration_tests.rst  mlflow_server_processes.rst  plugin_definition.rst  slc_building.rst
doc/features/: bucketfs_artifact_store.rst  index.rst  mlflow_rest_api.rst
doc/user_guide/: ai_gateway.rst  create_experiment.rst  index.rst  installation.rst  mlflow_server.rst  plugin_availability.rst  slc.rst  udfs.rst  uri_format.rst  virtual_schema_raw.rst
doc/user_guide/access_mlflow/: access_mlflow.rst  rest_api.rst  rest_endpoints.rst  template_rest_endpoints.jinja  virtual_schema.rst
doc/user_guide/ai_gateway/: ai_gateway.rst
doc/user_guide/installation/: connection_and_virtual_schema.rst  deployment.sql  installation.rst  slc.rst  udfs_and_adapter_script.rst  udfs_and_virtual_schema.rst
doc/user_guide/installation/sql/: adapter_script.sql  connection.sql  virtual_schema.sql
doc/user_guide/udfs/: udf_details.rst  udf_intro.rst  udfs.rst
doc/user_guide/udfs/bfs_artifact_store/: bfs_artifact_store.rst  experiment.rst  plugin_availability.rst  scopes.rst  uri_format.rst
exasol/mlflow_plugin/: __init__.py  artifacts.py  connections.py  env_vars.py  exa_meta.py  slc.py
exasol/mlflow_plugin/artifacts/: bucketfs_connector.py  bucketfs_spec.py  repo.py
exasol/mlflow_plugin/experiment/: main.py  training_data.py
exasol/mlflow_plugin/rest_api/: __init__.py  adapter.py  column.py  data.py  expanding.py  experiments.py  processing.py  rest_api.py  streaming.py  udf_body.py  udf_deployment.py  virtual_schema.py
exasol/mlflow_plugin/rest_api/data/: __init__.py  column.py
exasol/mlflow_plugin/rest_api/endpoints/: artifacts.py  endpoint.py  experiments.py  gateways.py  input_columns.py  model_versions.py  models.py  runs.py
exasol/mlflow_plugin/rest_api/udf/: __init__.py  body.py  call.py  deployment.py  rendering.py  verification.py
exasol/mlflow_plugin/rest_api/virtual_schema/: __init__.py  adapter.py  adapter_properties.py  errors.py  request_handler.py  types.py  virtual_schema.py
exasol/mlflow_plugin/rest_api/vs_impl/: __init__.py  adapter_impl.py  mf_request_handler.py  mlflow_vs.py  request_handler.py  rewrite_queries.py
exasol/mlflow_plugin/virtual_schema/: __init__.py  adapter_properties.py  dict_utils.py  query_rewriter.py  request_handler.py  virtual_schema.py
exasol/mlflow_plugin/virtual_schema/deployment/: __init__.py  adapter.py  connection.py  virtual_schema.py
test/: conftest.py  not_raises.py  test_sample.py
test/integration/: conftest.py  test_bfs_repo.py  test_model_logging.py  test_slc.py  udfs.py
test/integration/virtual_schema/: adapter_impl.py  test_virtual_schema.py
test/integration/virtual_schema/resources/: adapter_impl.py
test/integration/with_mlflow_server/: conftest.py  gateway.py  mlflow_connection.py  test_model_logging.py  test_slc.py  test_udfs.py  udfs.py
test/integration/with_mlflow_server/rest_api/: conftest.py  gateway_rest_api.py  test_endpoints.py  test_experiments_search.py  test_rest_api_udfs.py  test_vs_impl.py
test/unit/: helpers.py  unit_smoke_test.py
test/unit/artifacts/: test_bucketfs_connector.py  test_bucketfs_spec.py
test/unit/rest_api/: test_body.py  test_column.py  test_endpoint.py  test_expanding.py  test_experiments.py  test_processing.py  test_rest_api.py  test_udf_body.py
test/unit/rest_api/udf/: mocking.py  test_body.py  test_deployment.py  test_udf_call.py  test_verification.py
test/unit/rest_api/virtual_schema/: property_utils.py  test_adapter_properties.py  test_request_handler.py
test/unit/virtual_schema/: property_utils.py  test_adapter_properties.py  test_request_handler.py
test/unit/virtual_schema/impl/: test_impl_request_handler.py  (+1 more)
