[project]
name = "exasol-mlflow-plugin"
version = "1.1.0"
description = "Plugin for MLflow supporting artifact repository Exasol BucketFS"
authors = [{ name = "Exasol AG", email = "christoph.kuhnke@exasol.com" }]
requires-python = ">=3.10,<3.14"
readme = "README.rst"
license = "MIT"
keywords = [
    "exasol",
    "mlflow_plugin",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "exasol-bucketfs (>=2.1.0,<3.0.0)",
    "mlflow (>=3.8.1, <4)",
]

[tool.poetry]
requires-poetry = ">=2.3.0"
packages = [
    { include = "exasol" },
]

[project.entry-points."mlflow.artifact_repository"]
"exa+bfs" = "exasol.mlflow_plugin.artifacts.repo:BucketFsArtifactRepo"
"exa+bfss" = "exasol.mlflow_plugin.artifacts.repo:BucketFsArtifactRepo"
# end of plugin configuration

[dependency-groups]
dev = [
    "exasol-toolbox>=6, <7",
    "pytest-exasol-backend>=1.2.4, <2.0.0",
    "exasol-python-extension-common>= 0.12.1",
    "pytest-exasol-slc>= 0.4.3",
    # pyexasol = "^2.0.0, <3" # requires pec to update dependency first
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project.urls]
repository = "https://github.com/exasol/mlflow-plugin"
homepage = "https://github.com/exasol/mlflow-plugin"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "docker.*",
    # py.typed file only available with version >= 2
    "pyexasol.*",
    "sklearn.*",
]
follow_untyped_imports = true


# Tooling - marking what to show in the documentation
[tool.coverage.run]
relative_files = true
source = [
    "exasol",
]

[tool.coverage.report]
fail_under = 0 # set to 15 as soon as there are some sources incl. tests

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"
force_grid_wrap = 2

[tool.pylint.master]
fail-under = 5.0
ignore = []

[tool.pylint.format]
max-line-length = 88
max-module-lines = 800

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]
unfixable = []

[tool.sonar]
projectKey = "com.exasol:mlflow-plugin"
host.url = "https://sonarcloud.io"
organization = "exasol"
exclusions = "exasol/mlflow_plugin/version.py"
projectName = "mlflow-plugin"
